--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project(sdl2p1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(sdl2p1 scripts/main.cpp)
+add_executable(sdl2p1
+        scripts/main.cpp
+        scripts/Entity.cpp
+        scripts/RenderWindow.cpp
+#        scripts/main1.cpp
+)
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 
